fix modal overflow in smartphone portrait

--- a/portfolio-website/styles/styles.css
+++ b/portfolio-website/styles/styles.css
@@ -143,83 +143,7 @@ nav a.active {
     bottom: 1%;
     font-size: 4vmax;
 }
-    /* BREAK TEXT AND OTHER RESPONSIVE BEHAVIORS */
-    /* For small screens */
-@media screen and (max-width: 600px) {
-    .smscreen {
-        display: inline;
-    }
-    .myName:hover{
-        font-size: inherit;
-        font-family: inherit;
-        font-weight: inherit;
-        color: rgb(177, 21, 0);
-    }
-    .topnav {
-        background-color: #212121;
-    }
-    nav a {
-        padding: 1.5vmax;
-        font-size: 2.5vmax;
-    }
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-      .topnav a.icon {
-        float: right;
-        display: block;
-        padding-top: 1vmax;
-    }
-}
-@media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    .topnav.responsive {float: none;}
-    .topnav.responsive {position: relative;}
-    .topnav.responsive {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-}
-    /* SMARTPHONE PORTRAIT*/
-@media screen and (max-width: 415px) {
-    .text-container {
-        padding-top: 10%;
-        padding-left: 2%;
-    }
-    .hi {
-        font-size: 10.5vw;
-    }
-    .button {
-        font-size: 10.5vw;
-    }
-}
-    /* LARGE SCREENS */
-@media screen and (min-width: 1366px) {
-    .hi {
-        font-size: 82px;
-    }
-    .button {
-        font-size: 82px;
-    }
-    nav a {
-        padding: 14px;
-        font-size: 28px;
-    }
-    .open-button > i {
-        font-size: 55px;
-    }
-}
+
     /* MAIN */
 .main-container {
     width: 100%;
@@ -283,7 +207,6 @@ nav a.active {
     width: 50%;
     max-width: 400px;
     min-width: 320px;
-    height: auto;
     z-index: 9000;
     visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -340,6 +263,7 @@ nav a.active {
     color: #000;
     background-color: white;
     position: relative;
+    height: 100%;
     border-radius: 3px;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
@@ -374,27 +298,36 @@ nav a.active {
     margin-top: 10px;
     border: none;
     border-bottom: 1px solid black;
+    border-radius: 0%;
 }
 .md-content form ul li textarea {
     width: 100%;
+    height: 180px;
     margin-top: 10px;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.2em;
     border: none;
 }
-.btn {
-    width: 80%;
+.md-content form ul li input[type="submit"] {
+    width: 100%;
     font-size: 1.2em;
     padding: 15px;
-    margin: 0 10% 5% 10%;
+    margin-top: 10px;
     color: white;
     background: rgb(0, 87, 145);
     border: none;
     border-radius: 5px;
 }
-.btn:hover {
+.md-content form ul li input[type="submit"] {
     background: rgb(0, 106, 178);
 }
+@media screen and (max-height: 415px) {
+    .md-content form ul li textarea {
+        height: 60px;
+    }
+}
+/* /modal */
+
 footer p, footer a {
     margin: 0;
     padding: 12px 20px;
@@ -404,4 +337,81 @@ footer p, footer a {
 footer a {
     display: block;
     float: left;
+}
+/* BREAK TEXT AND OTHER RESPONSIVE BEHAVIORS */
+/* For small screens */
+@media screen and (max-width: 600px) {
+    .smscreen {
+        display: inline;
+    }
+    .myName:hover{
+        font-size: inherit;
+        font-family: inherit;
+        font-weight: inherit;
+        color: rgb(177, 21, 0);
+    }
+    .topnav {
+        background-color: #212121;
+    }
+    nav a {
+        padding: 1.5vmax;
+        font-size: 2.5vmax;
+    }
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+        .topnav a.icon {
+        float: right;
+        display: block;
+        padding-top: 1vmax;
+    }
+}
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .topnav.responsive {float: none;}
+    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+}
+    /* SMARTPHONE PORTRAIT*/
+@media screen and (max-width: 415px) {
+    .text-container {
+        padding-top: 10%;
+        padding-left: 2%;
+    }
+    .hi {
+        font-size: 10.5vw;
+    }
+    .button {
+        font-size: 10.5vw;
+    }
+}
+    /* LARGE SCREENS */
+@media screen and (min-width: 1366px) {
+    .hi {
+        font-size: 82px;
+    }
+    .button {
+        font-size: 82px;
+    }
+    nav a {
+        padding: 14px;
+        font-size: 28px;
+    }
+    .open-button > i {
+        font-size: 55px;
+    }
 }
